# dav-lab-exercises

./: .gitignore  README.md  main.py  pyproject.toml
data/coffee-chains/: Highlands+Coffee+Prices.csv  Highlands+Coffee_Hanoi.csv  Highlands+Coffee_Ho+Chi+Minh+City.csv  Phuc+Long+Coffee+Prices.csv  Phuc+Long+Coffee_Hanoi.csv  Phuc+Long+Coffee_Ho+Chi+Minh+City.csv  Starbucks+Prices.csv  Starbucks_Hanoi.csv  Starbucks_Ho+Chi+Minh+City.csv
data/linux-adoption/: DistroWatch_HPD.csv  StatCounter_Viet+Nam.csv  StatCounter_Worldwide.csv  Steam+HW+Survey_Platform+Versions.csv
notebooks/: 01_data_collection.ipynb  02+03_data_preprocessing_and_visualisation.ipynb  02_data_preprocessing_and_visualisation.ipynb  02_preprocessing_and_visualisation.ipynb  04_plotly_dash.ipynb  05+06+07_probability_and_statistics.ipynb  05_probability_and_statistics_pt_1.ipynb  06_probability_and_statistics_pt_2.ipynb  07_hypothesis_testing.ipynb  08_multiple_linear_regression.ipynb
notebooks/.ipynb_checkpoints/: 01_data_collection-checkpoint.ipynb
utils/: Starbucks_Hanoi.csv  google-maps.py
