[project]
name = "lab-exercises"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kagglehub>=0.3.13",
    "lxml>=6.0.2",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "playwright>=1.55.0",
    "plotly>=6.3.1",
    "pycountry>=24.6.1",
    "seaborn>=0.13.2",
]
